--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rowsncolumns/grid": "^8.0.8",
+    "express": "^4.18.1",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "react": "^18.2.0",
